@@ -1,4 +1,4 @@
-Package: async
+Package: future.BatchJobs
 Version: 0.8.0-9000
 Depends:
     R (>= 3.2.0),
@@ -14,10 +14,11 @@ Title: A Future for BatchJobs
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
                                           email = "henrikb@braju.com"))
 Description: Simple parallel and distributed processing using futures
-    implemented for the 'BatchJobs' framework, e.g. 'fit %<-% { glm.fit(x, y) }'.
-    This package extends the Future API of the 'future' package.
+    that utilizes the 'BatchJobs' framework, e.g. 'fit %<-% { glm.fit(x, y) }'.
+    This package implements the Future API of the 'future' package.
+    To use BatchJobs futures, just specify 'plan(batchjobs)'.
 License: Private for now [will become LGPL (>= 2.1) when published]
 LazyLoad: TRUE
-URL: https://github.com/HenrikBengtsson/async
-BugReports: https://github.com/HenrikBengtsson/async/issues
+URL: https://github.com/HenrikBengtsson/future.BatchJobs
+BugReports: https://github.com/HenrikBengtsson/future.BatchJobs/issues
 RoxygenNote: 5.0.1
