@@ -1,3 +1,3 @@
-library("async")
+library("future.BatchJobs")
 demo("mandelbrot", package="future", ask=FALSE)
 message("\n\nTIPS: Try plan(batchjobs, backend='multicore') before running this demo.\n")
