@@ -1,7 +1,8 @@
-Package: async
-==============
+Package: future.BatchJobs
+=========================
 
 Version: 0.8.0-9000 [2016-04-15]
+o Package renamed to future.BatchJobs (was async).
 o Package requires R (>= 3.2.0) just so Mandelbrot demo works.
 o STANDARIZATION Now using option and environment names already defined
   by the future package, i.e. future.maxTries, future.interval, and
